# Matrix-Rain

./: .gitignore  Cargo.toml  README.md
python/: matrix_rain.py
src/: main.rs
src/gpu/: app.rs  atlas.rs  camera.rs  mod.rs  postprocess.rs  rain.rs  renderer.rs
src/gpu/shaders/: blur.wgsl  bright_extract.wgsl  composite.wgsl  glyph.wgsl  glyph_direct.wgsl
